--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "stripe/stripe-php": "^9.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
